microservice_deployment/istio_config/istio_config.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: frontendnodeport
  namespace: default
  labels:
    kiali_wizard: request_routing
spec:
  hosts:
    - "*"
  gateway: ingress-gateway
    - 
  http:
    - route:
        - destination:
            host: frontendnodeport.default.svc.cluster.local
            subset: original
          weight: 22
        - destination:
            host: frontendnodeport.default.svc.cluster.local
            subset: experimental
          weight: 78
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: frontendnodeport
  namespace: default
  labels:
    kiali_wizard: request_routing
spec:
  host: frontendnodeport.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
